--- a/app/src/main/res/layout/fragment_pilot.xml
+++ b/app/src/main/res/layout/fragment_pilot.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragmentPilot.PilotFragment">
+    android:background="@color/background_color"
+    android:orientation="vertical"
+    tools:context=".view.pilot.fragmentPilot.PilotFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvTheme"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Pilot List"
-        tools:layout_editor_absoluteX="46dp"
-        tools:layout_editor_absoluteY="32dp" />
-
-    <Button
-        android:id="@+id/btnToPilotDetail"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="To pilot detail"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        android:fontFamily="@font/raleway_regular"
+        android:padding="@dimen/padding_list_item"
+        android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPilots"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+</LinearLayout>
